--- a/MenuCycles.AutomatedTests/packages.config
+++ b/MenuCycles.AutomatedTests/packages.config
@@ -1,12 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Appium.WebDriver" version="3.0.0.2" targetFramework="net45" />
+  <package id="Bogus" version="18.0.2" targetFramework="net45" />
   <package id="Castle.Core" version="3.3.3" targetFramework="net45" />
   <package id="Fourth.Automation.Framework.Core" version="1.4.0" targetFramework="net45" />
   <package id="Fourth.Automation.Framework.Mobile" version="1.3.0" targetFramework="net45" />
   <package id="Fourth.Automation.Framework.Reporting" version="2.1.2" targetFramework="net45" />
   <package id="log4net" version="2.0.8" targetFramework="net45" />
-  <package id="Newtonsoft.Json" version="10.0.2" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net45" />
   <package id="NUnit" version="3.6.1" targetFramework="net45" />
   <package id="Polly" version="5.1.0" targetFramework="net45" />
   <package id="Selenium.Chrome.WebDriver" version="2.31" targetFramework="net45" />
