Data Project and small changes

--- a/MenuCycles.AutomatedTests/App.config
+++ b/MenuCycles.AutomatedTests/App.config
@@ -3,8 +3,8 @@
   <configSections>
     <section name="specFlow" type="TechTalk.SpecFlow.Configuration.ConfigurationSectionHandler, TechTalk.SpecFlow" />
     <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
-    <section name="fourth" type="Fourth.Automation.Framework.Configuration.FourthSection,  Fourth.Automation.Framework.Core" />
     <section name="report" type="Fourth.Automation.Framework.Reporting.Configuration.ReportSection, Fourth.Automation.Framework.Reporting" />
+    <section name="fourth" type="Fourth.Automation.Framework.Configuration.FourthSection,  Fourth.Automation.Framework.Core" />
   </configSections>
   <log4net>
     <appender name="RollingFile" type="log4net.Appender.RollingFileAppender">
@@ -22,27 +22,27 @@
     </logger>
   </log4net>
 
+  <fourth driverType="Chrome" serverUrl="" driverDirectory="">
+    <reporting keepScreenshot="false" takeScreenshotOnError="false" />
+    <timeout driverCommands="00:00:59" defaultWait="00:00:59" />
+    <capabilities>
+      <add key="--start-maximized" />
+    </capabilities>
+  </fourth>
+  
   <appSettings>
     <add key="Engage.Url" value="https://qapartial-fourth-app.cs87.force.com" />
     <add key="Engage.User" value="sindhu.t15820@fourth.com" />
     <add key="Engage.Password" value="Mypassword_001" />
   </appSettings>
-  
-  <fourth driverType="Chrome" serverUrl="" driverDirectory="">
-  	<reporting keepScreenshot="false" takeScreenshotOnError="false" />
-  	<timeout driverCommands="00:00:59" defaultWait="00:00:59" />
-  	<capabilities>
-      <add key="--start-maximized" />
-  	</capabilities>
-  </fourth>
     
   <report reportName="MenuCyclesReport.json" filePath="C:/Cucumber">
   </report>
 
   <specFlow>
     <stepAssemblies>
-      <stepAssembly assembly="Fourth.Automation.Framework.Core" />
       <stepAssembly assembly="Fourth.Automation.Framework.Reporting" />
+      <stepAssembly assembly="Fourth.Automation.Framework.Core" />
     </stepAssemblies>
   </specFlow>
   
@@ -54,4 +54,5 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" /></startup>
 </configuration>
