--- a/MenuCycles.AutomatedTests/App.config
+++ b/MenuCycles.AutomatedTests/App.config
@@ -1,9 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
-    <section name="specFlow" type="TechTalk.SpecFlow.Configuration.ConfigurationSectionHandler, TechTalk.SpecFlow" />
     <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
     <section name="report" type="Fourth.Automation.Framework.Reporting.Configuration.ReportSection, Fourth.Automation.Framework.Reporting" />
+    <section name="specFlow" type="TechTalk.SpecFlow.Configuration.ConfigurationSectionHandler, TechTalk.SpecFlow" />
     <section name="fourth" type="Fourth.Automation.Framework.Configuration.FourthSection,  Fourth.Automation.Framework.Core" />
   </configSections>
   <log4net>
@@ -21,14 +21,6 @@
       <appender-ref ref="RollingFile" />
     </logger>
   </log4net>
-
-  <fourth driverType="Chrome" serverUrl="" driverDirectory="">
-    <reporting keepScreenshot="false" takeScreenshotOnError="false" />
-    <timeout driverCommands="00:00:59" defaultWait="00:00:59" />
-    <capabilities>
-      <add key="--start-maximized" />
-    </capabilities>
-  </fourth>
   
   <appSettings>
     <add key="Engage.Url" value="https://qapartial-fourth-app.cs87.force.com" />
@@ -44,7 +36,7 @@
       <stepAssembly assembly="Fourth.Automation.Framework.Reporting" />
       <stepAssembly assembly="Fourth.Automation.Framework.Core" />
     </stepAssemblies>
-  </specFlow>
+  <!-- For additional details on SpecFlow configuration options see http://go.specflow.org/doc-config --></specFlow>
   
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
@@ -54,5 +46,11 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
-<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" /></startup>
+  <startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" /></startup>
+  <fourth driverType="" serverUrl="" driverDirectory="">
+    <reporting keepScreenshot="false" takeScreenshotOnError="false" />
+    <timeout driverCommands="00:00:59" defaultWait="00:00:59" />
+    <capabilities>
+    </capabilities>
+  </fourth>
 </configuration>
