Changed to Entity Framework (WIP)

--- a/MenuCycles.AutomatedTests/App.config
+++ b/MenuCycles.AutomatedTests/App.config
@@ -5,7 +5,12 @@
     <section name="report" type="Fourth.Automation.Framework.Reporting.Configuration.ReportSection, Fourth.Automation.Framework.Reporting" />
     <section name="specFlow" type="TechTalk.SpecFlow.Configuration.ConfigurationSectionHandler, TechTalk.SpecFlow" />
     <section name="fourth" type="Fourth.Automation.Framework.Configuration.FourthSection,  Fourth.Automation.Framework.Core" />
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
+  <connectionStrings>
+    <add name="MenuServiceSodexoQAIEntities" connectionString="metadata=res://*/MenuCycleDataModel.csdl|res://*/MenuCycleDataModel.ssdl|res://*/MenuCycleDataModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=ie1apiqdb02.cloudapp.net;initial catalog=MenuServiceSodexoQAI;persist security info=True;user id=SQLA-VenkatSalivendra;password=hi2o2qcDYD5ipK6DvOM7;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
   <log4net>
     <appender name="RollingFile" type="log4net.Appender.RollingFileAppender">
       <file value="AppiumServerLogs.txt" />
@@ -21,23 +26,19 @@
       <appender-ref ref="RollingFile" />
     </logger>
   </log4net>
-  
   <appSettings>
     <add key="Engage.Url" value="https://qapartial-fourth-app.cs87.force.com" />
     <add key="Engage.User" value="sindhu.t15820@fourth.com" />
     <add key="Engage.Password" value="Mypassword_001" />
   </appSettings>
-    
-  <report reportName="MenuCyclesReport.json" filePath="C:/Cucumber">
-  </report>
-
+  <report reportName="MenuCyclesReport.json" filePath="C:/Cucumber"></report>
   <specFlow>
     <stepAssemblies>
       <stepAssembly assembly="Fourth.Automation.Framework.Reporting" />
       <stepAssembly assembly="Fourth.Automation.Framework.Core" />
     </stepAssemblies>
-  <!-- For additional details on SpecFlow configuration options see http://go.specflow.org/doc-config --></specFlow>
-  
+    <!-- For additional details on SpecFlow configuration options see http://go.specflow.org/doc-config -->
+  </specFlow>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
@@ -46,11 +47,22 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
-  <startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" /></startup>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
+  </startup>
   <fourth driverType="" serverUrl="" driverDirectory="">
     <reporting keepScreenshot="false" takeScreenshotOnError="false" />
     <timeout driverCommands="00:00:59" defaultWait="00:00:59" />
-    <capabilities>
-    </capabilities>
+    <capabilities></capabilities>
   </fourth>
+  <entityFramework>
+    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
+      <parameters>
+        <parameter value="mssqllocaldb" />
+      </parameters>
+    </defaultConnectionFactory>
+    <providers>
+      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
+    </providers>
+  </entityFramework>
 </configuration>
