Working on deletion

--- a/MenuCycles.AutomatedTests/App.config
+++ b/MenuCycles.AutomatedTests/App.config
@@ -6,6 +6,7 @@
     <section name="fourth" type="Fourth.Automation.Framework.Configuration.FourthSection,  Fourth.Automation.Framework.Core" />
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    <section name="report" type="Fourth.Automation.Framework.Reporting.Configuration.ReportSection, Fourth.Automation.Framework.Reporting" />
   </configSections>
   <connectionStrings>
     <add name="MenuServiceSodexoQAIEntities" connectionString="metadata=res://*/MenuCycleDataModel.csdl|res://*/MenuCycleDataModel.ssdl|res://*/MenuCycleDataModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=ie1apiqdb02.cloudapp.net;initial catalog=MenuServiceSodexoQAI;persist security info=True;user id=SQLA-VenkatSalivendra;password=hi2o2qcDYD5ipK6DvOM7;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
@@ -33,6 +34,7 @@
   <specFlow>
     <stepAssemblies>
       <stepAssembly assembly="Fourth.Automation.Framework.Core" />
+      <stepAssembly assembly="Fourth.Automation.Framework.Reporting" />
     </stepAssemblies>
     <!-- For additional details on SpecFlow configuration options see http://go.specflow.org/doc-config -->
   </specFlow>
@@ -62,4 +64,6 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+  <report reportName="Icaro2509.json" filePath="C:\Cucumber">
+  </report>
 </configuration>
