--- a/MenuCycles.AutomatedTests/MenuCycles.AutomatedTests.csproj
+++ b/MenuCycles.AutomatedTests/MenuCycles.AutomatedTests.csproj
@@ -75,6 +75,10 @@
       <HintPath>..\packages\Fourth.Automation.Framework.Mobile.1.3.0\lib\Fourth.Automation.Framework.Mobile.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Fourth.Automation.Framework.Reporting, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Fourth.Automation.Framework.Reporting.2.1.1\lib\Fourth.Automation.Framework.Reporting.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="log4net, Version=2.0.8.0, Culture=neutral, PublicKeyToken=669e0ddf0bb1aa2a, processorArchitecture=MSIL">
       <HintPath>..\packages\log4net.2.0.8\lib\net45-full\log4net.dll</HintPath>
       <Private>True</Private>
