Removed wrong parameters for reporting

--- a/MenuCycles.AutomatedTests/App.config
+++ b/MenuCycles.AutomatedTests/App.config
@@ -64,6 +64,6 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
-  <report reportName="Icaro2509.json" filePath="C:\Cucumber">
+  <report reportName="" filePath="">
   </report>
 </configuration>
