--- a/MenuCycle.Tests/App.Android.config
+++ b/MenuCycle.Tests/App.Android.config
@@ -5,16 +5,13 @@
   <appSettings>
     <add key="WebviewName" value="CHROMIUM" xdt:Transform="Replace" xdt:Locator="Match(key)"/>
   </appSettings>
-  <fourth driverType="Android" serverUrl="http://127.0.0.1:4723/wd/hub/" xdt:Transform="Replace">
-    <timeout driverCommands="00:03:00"/>
+  <fourth driverType="Android" serverUrl="http://127.0.0.1:4723/wd/hub/" driverDirectory="" xdt:Transform="Replace">
+    <reporting keepScreenshot="false" takeScreenshotOnError="false" />
+	<timeout driverCommands="00:03:00"/>
     <capabilities>
-      <add key="platformVersion" value="6.0.1"/>
+      <add key="platformVersion" value="5.1.1"/>
       <add key="deviceName" value="Nexus 5"/>
       <add key="browserName" value="Chrome"/>
-      <!--<add key="appPackage" value="com.fourth.marketplace.qa"/>
-      <add key="appActivity" value="com.salesforce.androidsdk.phonegap.ui.SalesforceDroidGapActivity"/>
-      <add key="app" value="C:\\Users\\itorres\\Documents\\Apps\\fourth-qai-debug.apk"/>-->
-      <!--<add key="recreateChromeDriverSessions" value="true"/>-->
     </capabilities>
   </fourth>
 </configuration>
