- added Page-Objects - refined features - added helper class Get - fixed test data

--- a/MenuCycle.Tests/MenuCycle.Tests.csproj
+++ b/MenuCycle.Tests/MenuCycle.Tests.csproj
@@ -299,6 +299,9 @@
     <Compile Include="PageObjects\PlanningWeeks\PlanningTabWeeks\MealPeriodWeeks.cs" />
     <Compile Include="PageObjects\PlanningWeeks\PlanningTabWeeks\PlanningTabWeeks.cs" />
     <Compile Include="PageObjects\PlanningWeeks\NutritionTabDays\NutritionTabWeeks.cs" />
+    <Compile Include="Support\Helpers\Get.cs" />
+    <Compile Include="Steps\MealPeriodSteps.cs" />
+    <Compile Include="Steps\PlanningSteps.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.Chrome.config">
@@ -349,6 +352,7 @@
     <Folder Include="PageObjects\CalendarWeeks\" />
     <Folder Include="PageObjects\PlanningWeeks\PlanningTabWeeks\" />
     <Folder Include="PageObjects\PlanningWeeks\NutritionTabDays\" />
+    <Folder Include="Support\Helpers\" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\Selenium.Chrome.WebDriver.2.32\build\Selenium.Chrome.WebDriver.targets" Condition="Exists('..\packages\Selenium.Chrome.WebDriver.2.32\build\Selenium.Chrome.WebDriver.targets')" />
