--- a/MenuCycle.Tests/App.config
+++ b/MenuCycle.Tests/App.config
@@ -1,11 +1,13 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
-    <section name="specFlow" type="TechTalk.SpecFlow.Configuration.ConfigurationSectionHandler, TechTalk.SpecFlow"/>
-    <section name="fourth" type="Fourth.Automation.Framework.Configuration.FourthSection,  Fourth.Automation.Framework.Core"/>
-    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net"/>
+    
     <section name="report" type="Fourth.Automation.Framework.Reporting.Configuration.ReportSection, Fourth.Automation.Framework.Reporting"/>
+  <section name="specFlow" type="TechTalk.SpecFlow.Configuration.ConfigurationSectionHandler, TechTalk.SpecFlow"/>
+  <section name="fourth" type="Fourth.Automation.Framework.Configuration.FourthSection,  Fourth.Automation.Framework.Core"/>
+  <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net"/>
   </configSections>
+  
   <appSettings>
     <add key="Engage.Url" value="https://qapartial-fourth-app.cs87.force.com"/>
     <add key="Engage.User" value="sindhu.t15820@fourth.com"/>
@@ -23,37 +25,37 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
-  <specFlow>
-    <!-- For additional details on SpecFlow configuration options see http://go.specflow.org/doc-config -->
-    <stepAssemblies>
-        <stepAssembly assembly="Fourth.Automation.Framework.Core"/>
-        <stepAssembly assembly="Fourth.Automation.Framework.Reporting"/>
-    </stepAssemblies>
-  </specFlow>
-  <fourth driverType="" serverUrl="" driverDirectory="">
-	  <reporting keepScreenshot="false" takeScreenshotOnError="false"/>
-	  <timeout driverCommands="00:00:59" defaultWait="00:00:59"/>
-	  <capabilities>
-	  </capabilities>
-  </fourth>
-  <log4net>
-  <appender name="RollingFile" type="log4net.Appender.RollingFileAppender">
-  <file value="AppiumServerLogs.txt"/>
-  <appendToFile value="true"/>
-  <maximumFileSize value="100KB"/>
-  <maxSizeRollBackups value="2"/>
-  <layout type="log4net.Layout.PatternLayout">
-  <conversionPattern value="%level %thread %logger - %message%newline"/>
-  </layout>
-  </appender>
-  <logger name="Fourth.Automation.Framework.Mobile.Appium.AppiumServer">
-  <level value="ALL"/>
-  <appender-ref ref="RollingFile"/>
-  </logger>
-  </log4net>
-  <report reportName="" filePath="">
-  </report>
 <startup>
   <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.2"/>
 </startup>
+<specFlow>
+    
+    <stepAssemblies>
+        <stepAssembly assembly="Fourth.Automation.Framework.Core"/>
+        <stepAssembly assembly="Fourth.Automation.Framework.Core"/>
+    </stepAssemblies>
+  <!-- For additional details on SpecFlow configuration options see http://go.specflow.org/doc-config --></specFlow>
+<report reportName="" filePath="">
+</report>
+<fourth driverType="" serverUrl="" driverDirectory="">
+<reporting keepScreenshot="false" takeScreenshotOnError="false"/>
+<timeout driverCommands="00:00:59" defaultWait="00:00:59"/>
+<capabilities>
+</capabilities>
+</fourth>
+<log4net>
+<appender name="RollingFile" type="log4net.Appender.RollingFileAppender">
+<file value="AppiumServerLogs.txt"/>
+<appendToFile value="true"/>
+<maximumFileSize value="100KB"/>
+<maxSizeRollBackups value="2"/>
+<layout type="log4net.Layout.PatternLayout">
+<conversionPattern value="%level %thread %logger - %message%newline"/>
+</layout>
+</appender>
+<logger name="Fourth.Automation.Framework.Mobile.Appium.AppiumServer">
+<level value="ALL"/>
+<appender-ref ref="RollingFile"/>
+</logger>
+</log4net>
 </configuration>
